--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -8,7 +8,7 @@
 {% block breadcrumbs %}
 
   {{ block.super }}
-    {% breadcrumb 'Create' 'users:create' %}
+    {% breadcrumb 'Add User' 'users:create' %}
 
 {% endblock %}
 
@@ -38,29 +38,57 @@
 		{% endfor %}
 	{% endif %}
 
-	<form method="post" action="" enctype="multipart/form-data">
-		{% csrf_token %}
-		{% for field in form %}
-			<div class="form-group{% if form.has_error %} has-error {% endif %}">
-				<label for="{{ field.auto_id }}">{{ field.label }}</label>
-				{% render_field field class='form-control input-sm' %}
-				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
-				{% if field.errors.length > 0 %}
-					<div class="alert alert-danger alert-dismissible" role="alert">
-	  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-	  						<span aria-hidden="true">&times;</span>
-  						</button>
-						<ul>
-							{% for error in field.errors %}
-								<li>{{ error }}</li>
-							{% endfor %}
-						</ul>
-					</div>
-				</div>
-				{% endif %}
+	<div class="card">
+		<div class="card-content">
+			<div class="card-body">
+				<form method="post" action="" enctype="multipart/form-data">
+					{% csrf_token %}
+					{% for field in form %}
+						<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+							<label for="{{ field.auto_id }}">{{ field.label }}</label>
+							{% if field.auto_id == 'id_birth_date' %}
+								{% render_field field class='form-control input-sm' type='date' %}
+								<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
+							{% elif field.auto_id == 'id_image' %}
+								{% render_field field class='form-control input-sm' %}
+								<div class="input-group">
+				                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+				                    <span class="input-group-btn input-group-sm">
+				                        <button type="button" class="btn btn-fab btn-fab-mini">
+				                          	<i class="material-icons">attach_file</i>
+				                        </button>
+				                    </span>
+				                </div>
+				            {% elif field.auto_id == 'id_is_staff' or field.auto_id == 'id_is_active' %}
+				            	<div class="checkbox">
+				            		<label>
+				            			{% render_field field type='checkbox' %}  	
+				            		</label>
+						        </div>
+							{% else %}
+								{% render_field field class='form-control input-sm' %}
+								<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
+							{% endif %}
+							{% if field.errors.length > 0 %}
+								<div class="alert alert-danger alert-dismissible" role="alert">
+				  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				  						<span aria-hidden="true">&times;</span>
+			  						</button>
+									<ul>
+										{% for error in field.errors %}
+											<li>{{ error }}</li>
+										{% endfor %}
+									</ul>
+								</div>
+							</div>
+							{% endif %}
+						</div>
+					{% endfor %}
+					<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
+				</form>
 			</div>
-		{% endfor %}
-		<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
-	</form>
+		</div>
+	</div>
+	
 	<br clear="all" />
 {% endblock %}
