--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -71,7 +71,12 @@
 							{% endif %}
 						</div>
 					{% endfor %}
-					<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
+					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
+						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+					</div>
+					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
+						<a href="{% url 'users:manage' %}" class="btn btn-sm btn-success" >{% trans 'Cancel' %}</a>	
+					</div>
 				</form>
 			</div>
 		</div>
