--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -54,7 +54,11 @@
 		{% for course in courses %}
 			<div class="row well well-inverse">
 		  		<div class="col-md-2">
+            {% if course.image %}
 		  			<img src="{{ course.image.url }}" class="img-responsive" />
+            {% else %}
+            <img src="" class="img-responsive" />
+            {% endif %}
 	  			</div>
 		  		<div class="col-md-10">
 					<div class="row">
