--- a/courses/templates/subject/delete.html
+++ b/courses/templates/subject/delete.html
@@ -8,7 +8,7 @@
   <div class="panel-body">
     <form action="" method="post">
       {% csrf_token %}
-        <h2>{% trans 'Are you sure you want to delete the category' %} "{{subject}}"?</h2>
+        <h2>{% trans 'Are you sure you want to delete the subject' %} "{{subject}}"?</h2>
         <input type="submit" class="btn btn-raised btn-success btn-lg" value="{% trans 'Yes' %}" />
         <a href="{% url 'course:view_subject' subject.slug%}" class="btn btn-raised btn-danger btn-lg">{% trans 'No' %}</a>
     </form>
