Changing accordion color [Issues: #44 and #45]

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -256,4 +256,9 @@ a.alert_message:hover{color : grey}
   display: none;
 }
 
-
+.accordion {
+    background: #c0c0c0;
+}
+.accordion_list {
+    background: #e0e0e0;
+}
