--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -94,10 +94,10 @@
             	{% endif %}
             	{% if user|has_role:'system_admin' or user|has_role:'professor' %}
             		<li> 
-            			<a href="#courses_list" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
+            			<a href="#courses_list" class="accordion" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
 
 						<div id="courses_list" class="collapse">
-							<ul class="nav nav-pill nav-stacked">
+							<ul class="nav nav-pill nav-stacked accordion_list">
 								{% for course in courses_list %}
 									<li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
 								{% endfor %}
