--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -10,71 +10,86 @@
     {% endblock sidebar %}
 
 {% block content %}
-	<div class="row logo-row">
-        <div class="col-lg-offset-2 col-lg-9">
-            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus" id="logo">
+	<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          </br>
+          </br>
+          <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus">
+          </br>
+        </div>
+      </div>
     </div>
-
     <div class="row">
         {% for breadcrumb in breadcrumbs %}
           <a href="{{ breadcrumb.url }}">{{ breadcrumb.text }}</a>
         {% endfor %}
-  </div>
+    </div>
 
-	<div class="row ">
-        <div class="col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
-            <div class="card">
-							{% if message %}
-							<div class="alert alert-danger fade in">
-								{{message}}
-							</div>
-
-							{% endif %}
-                <div class="card-content">
-                    
-						<form id="form-login" class="form-group" method="post" action="">
-							{% csrf_token %}
-							<div class="form-group is-empty">
-								<label for="inputEmail" class="col-md-4 control-label"> {% trans 'Username' %}</label>
-                                <div class="col-md-8">
-                                    <input form="form-login" type="text" name="username" class="form-control" id="inputEmail" placeholder="Username">
-                                </div>
-							</div>
-                            <div class="form-group is-empty">
-                                <label for="inputPassword" class="col-md-4 control-label"> {% trans 'Password' %}</label>
-                                <div class="col-md-8">
-                                    <input form="form-login" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class=" col-md-10">
-                                <div class="checkbox">
-                                    <label>
-                                        <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
-                                    </label>
-                                </div>
-                            </div>
-						</form>
-                    
-
-                    
-                        <div class="col-md-6 col-xs-6">
-                            <button type="button" class="btn btn-flat" formaction="#" style="position: initial;">{% trans 'Guest' %}</button>
-                        </div>
-                        <div class="col-md-6 col-xs-6">
-                            <button type="submite" class="btn btn-flat btn-success" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
-                        </div>
-                    
-                </div>
+  	<div class="row ">
+      <div class="col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
+          {% if message %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              <ul>
+                  <li>{{ message }}</li>
+              </ul>
             </div>
-        </div>
+          {% endif %}
+          <div class="card">
+                <div class="card-block">
+                  {# <div class="row"> #}
+                    <form id="form-login" class="form-group" method="post" action="">
+        							{% csrf_token %}
+        							<div class="form-group is-empty">
+        								<label for="inputEmail" class="col-md-4 control-label"> {% trans 'Username' %}</label>
+                        <div class="col-md-8">
+                            <input form="form-login" type="text" name="username" class="form-control" id="inputEmail" placeholder="Username" value="{% if username %}{{username}}{% endif %}">
+                        </div>
+        							</div>
+                      <div class="form-group is-empty">
+                          <label for="inputPassword" class="col-md-4 control-label"> {% trans 'Password' %}</label>
+                          <div class="col-md-8">
+                              <input form="form-login" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+                          </div>
+                      </div>
+                      <div class="col-md-10">
+                        <div class="checkbox">
+                          <label>
+                              <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
+                          </label>
+                        </div>
+                      </div>
+        						</form>
+                  {# </div> #}
+                  {# <div class="row"> #}
+                    <div class="col-md-10">
+                        <a href="{% url 'core:remember_password' %}">Forgot your password?</a>
+                    </div>
+                  {# </div> #}
+                  {# <div class="row"> #}
+                    <div class="col-md-6 col-xs-6 text-center">
+                        <button type="button" class="btn btn-flat" formaction="#" style="position: initial;">{% trans 'Guest' %}</button>
+                    </div>
+                    <div class="col-md-6 col-xs-6 text-center">
+                        <button type="submite" class="btn btn-flat btn-success" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
+                    </div>
+                  {# </div> #}
+                </div>
+              </div>
+      </div>
     </div>
     <div class="row">
-        <div class="col-lg-offset-2 col-lg-8 col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
-            <a class="btn btn-raised btn-primary btn-lg btn-block" href="{% url 'core:register' %}">{% trans 'Sign Up' %} </a>
-        </div>
+      <div class="col-lg-offset-2 col-lg-8 col-md-8 col-md-offset-2 col-sm-6 col-sm-offset-3">
+          <a class="btn btn-raised btn-primary btn-lg btn-block" href="{% url 'core:register' %}">{% trans 'Sign Up' %} </a>
+      </div>
     </div>
+  </div>
 {% endblock%}
 
 {% block rightbar %}
-    
+
 {% endblock rightbar %}
