--- a/core/templates/remember_password.html
+++ b/core/templates/remember_password.html
@@ -1,49 +1,66 @@
 {% extends "index.html" %}
-{% load i18n %}
-{% block content %}
+{% load i18n static %}
+{% block content%}
 
-	<div class="row logo-row">
-	<div class="col-lg-offset-2 col-lg-9">
-		<img src="..." class="img-responsive center-block " alt="logo amadeus">
-	</div>
-	</div>
-	<div class="row ">
-	<div class="col-lg-9 col-lg-offset-2">
-		<div class="card">
-			{% if success %}
-			<div class="alert alert-success fade in">
-				{{success}}
-			</div>
-			{% elif danger %}
-			<div class="alert alert-danger fade in">
-				{{danger}}
-			</div>
-			{% endif %}
-		    <div class="card-content">
-		        <div class="card-body">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          </br>
+          </br>
+          <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus">
+          </br>
+        </div>
+      </div>
+    </div>
+		<div class="row ">
+			<div class="col-lg-9 col-lg-offset-2">
+				{% if success %}
+				<div class="alert alert-success alert-dismissible" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					<ul>
+							<li>{{ success }}</li>
+					</ul>
+				</div>
+				{% elif danger %}
+				<div class="alert alert-danger alert-dismissible" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					<ul>
+							<li>{{ danger }}</li>
+					</ul>
+				</div>
+				{% endif %}
+				<div class="card">
+			    <div class="card-block">
+		        <div class="col-md-12">
 		        	<form class="form-group " method="post" action="">
 								{% csrf_token %}
-								<div class="form-group">
-		        			<label for="inputEmail" class="control-label label-static"> {% trans 'E-mail' %}</label>
-		        			<input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email" {% if email %}value="{{email}}"{% endif %}>
+								<div class="form-group is-empty">
+		        			<label for="inputEmail" class="ccontrol-label"> {% trans 'E-mail' %}</label>
+									{# <div class="col-md-8"> #}
+										<input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email" {% if email %}value="{{email}}"{% endif %}>
+									{# </div> #}
 		        		</div>
-								<div class="form-group">
-			        		<label for="inputRegistration" class=" control-label"> {% trans 'Registration' %} </label>
-			        		<input name="registration" type="text" class="form-control" id="inputRegistration" placeholder="Registration" {% if registration %}value="{{registration}}"{% endif %}>
+								<div class="form-group is-empty">
+			        		<label for="inputRegistration" class="control-label"> {% trans 'Registration' %} </label>
+									{# <div class="col-md-8"> #}
+										<input name="registration" type="text" class="col-md-4 form-control" id="inputRegistration" placeholder="Registration" {% if registration %}value="{{registration}}"{% endif %}>
+									{# </div> #}
 								</div>
-						<div class="col-lg-offset-4 col-lg-4">
-							<button type="submite" class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Send' %}</button>
+								<div class="col-lg-offset-4 col-lg-4">
+									<button type="submite" class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Send' %}</button>
 
-						</div>
-
+								</div>
 		        	</form>
 		        </div>
-
-		    </div>
-
-
+			    </div>
+				</div>
+			</div>
 		</div>
-	</div>
 	</div>
 
 {% endblock content %}
