review #53, scroll of notifiation is done, I'll create another issue to work on how to make the ajax calls work, in parallel, I'm working the notifications decorators, which are not working properly

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -1,3 +1,12 @@
+/* HEADER */
+#notificationscroll{
+  max-height: 500%;
+  overflow: auto;
+}
+
+/* HEADER */
+
+
 .logoLogin{
     padding-bottom: 1%;
     width: 15%;
