--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -54,7 +54,7 @@
 			                		<ul class="nav navbar-nav navbar-right notifications">
 			                  			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">         
 						                   <a  class="dropdown-toggle" data-toggle="dropdown"> <span class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell-o" aria-hidden="true"></i></a>
-						                     <ul class="dropdown-menu">
+						                     <ul id="notification-dropdown" class="dropdown-menu">
 						                     <li class="dropdown-header">Notifications</li>
 						                     	{% for notification in notifications  %}
 						                     		{% if notification.actor %} <!-- if the notification has a user-->
