refactored the missing .css, now the task is done #53

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -1,7 +1,8 @@
 /* HEADER */
-#notificationscroll{
+#notification-dropdown{
   max-height: 500%;
   overflow: auto;
+  width: 200px;
 }
 
 /* HEADER */
