Removing input-sm class #14

--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -45,7 +45,7 @@
 						                    </span>
 						                </div>
 									{% else %}
-										{% render_field field class='form-control input-sm' %}
+										{% render_field field class='form-control' %}
 										<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 									{% endif %}
 								</div>
