fixing some bugs in professor's course

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -17,7 +17,7 @@
 {% block sidebar %}
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <img src="{{ user.image.url }}" id="img" class="img-circle img-responsive">
+    <img src="{{ user.image_url }}" id="img" class="img-circle img-responsive">
   </br>
     <div class="row">
       <div class="col-xs-3 col-md-3">
