Inicial template [Issue: #73]

--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -1,19 +1,53 @@
-{% load i18n %}
+{% load static i18n %}
+
+{% block javascript %}
+    <script type="text/javascript">
+    var baseUrl = '{% url "forum:index" %}';
+
+        function showForum(topic) {
+            $.ajax({
+                url: baseUrl, 
+                data: {'topic': topic},
+                success: function(data) {
+                    console.log(data);
+                    $(".modal-body").html(data);
+                }
+            });
+
+            $('#forumModal').modal();
+        }
+    </script>
+{% endblock %}
 
 <div class="panel panel-default">
-  <a href="{% url 'course:view_topic' topic.slug %}">
-  <div class="panel-heading">
-    <div class="row">
-      <div class="col-md-9 col-sm-9">
-        <h3>{{topic}}</h3>
-      </div>
-      <div class="col-md-3 col-sm-3">
-        <a href="{% url 'course:update_topic' topic.slug%}" class="btn">{% trans "edit" %}</a>
-      </div>
+    <a href="{% url 'course:view_topic' topic.slug %}">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-md-9 col-sm-9">
+                    <h3>{{topic}}</h3>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <a href="{% url 'course:update_topic' topic.slug%}" class="btn">{% trans "edit" %}</a>
+                </div>
+            </div>
+        </div>
+    </a>
+    <div class="panel-body">
+        <p>{{topic.description|linebreaks}}</p>
+        <a href="javascript:showForum('{{topic.slug}}')">Forum</a>
     </div>
-  </div>
-  </a>
-  <div class="panel-body">
-    <p>{{topic.description|linebreaks}}</p>
-  </div>
+</div>
+
+<div class="modal fade" id="forumModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel"></h4>
+            </div>
+            <div class="modal-body">
+                
+            </div>
+        </div>
+    </div>
 </div>
