--- a/forum/templates/forum_list.html
+++ b/forum/templates/forum_list.html
@@ -2,10 +2,16 @@
 
 {% if foruns|length > 0 %}
     {% for forum in foruns %}
-        <div class="page-header">
-            <h1 id="timeline">{{ forum }}</h1>
-            <b>Descricao: </b>{{ forum.description }}<p>
-            <b>Abertura: </b>{{ forum.create_date }}
+        <a class="forum_collapse" role="button" href="javascript: showPosts('{{ forum.slug }}')" aria-expanded="false">
+            <div class="page-header">
+                <h1 id="timeline">{{ forum }}</h1>
+                <b>{% trans 'Description' %}: </b>{{ forum.description }}<p>
+                <b>{% trans 'Created in' %}: </b>{{ forum.create_date }}
+            </div>
+        </a>
+        <div class="collapse" id="collapse{{ forum.slug }}">
+            <div class="well">
+            </div>
         </div>
     {% endfor %}
 {% else %}
@@ -13,39 +19,3 @@
         <p>{% trans 'No forum created yet.' %}</p>
     </div>
 {% endif %}
-<!-- <ul class="timeline">
-    <li>
-        <div class="timeline-badge">
-            <img id="logo" src="https://uxdesign-html-japm94.c9users.io/atividades-amadeus/uxdesign-html/img/topo-amadeus.png">
-        </div>
-        <p></p>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="timeline-title">Python is insteresting</h4>
-                <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago by </small>Carlos </p>
-            </div>
-            <div class="timeline-body">
-                <p>Who knows how working a String in python?</p>
-            </div>
-            <hr>
-            <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i>
-        </div>
-    </li>
-    <li>
-        <div class="timeline-badge">
-            <img id="logo" src="https://uxdesign-html-japm94.c9users.io/atividades-amadeus/uxdesign-html/img/topo-amadeus.png">
-        </div>
-        <p></p>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="timeline-title">Ruby's doubt</h4>
-                <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 5 hours ago by </small>Jurandi</p>
-            </div>
-            <div class="timeline-body">
-                <p>How works the Gems?</p>
-            </div>
-            <hr>
-            <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i>
-        </div>
-    </li>
-</ul> -->
